Issue IMCMS-562: User properties - Add styles align

--- a/src/main/webapp/imcms/css/modal_window/imcms-modal_window.css
+++ b/src/main/webapp/imcms/css/modal_window/imcms-modal_window.css
@@ -208,8 +208,9 @@
 }
 
 .imcms-field__save-btn {
-    padding: 10px 20px;
+    padding: 10px 8px;
     display: none;
+    line-height: 10%;
 }
 
 .user-properties-content__items {
